--- a/index.html
+++ b/index.html
@@ -3,10 +3,126 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LINC Activity Test</title>
+<title>CLB 3/4 Reading – Future Study Goals</title>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #ffffff;
+  margin: 0;
+  padding: 20px;
+  line-height: 1.6;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+
+h2 {
+  background: #e3f2fd;
+  padding: 12px;
+}
+
+.task {
+  margin-top: 25px;
+}
+
+select, textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 6px;
+  font-size: 1rem;
+}
+</style>
 </head>
+
 <body>
-<h1>✅ LINC Activity Works</h1>
-<p>If you see this page, GitHub Pages is working correctly.</p>
+
+<div class="container">
+
+<h2>📘 Reading: Future Study Goals</h2>
+
+<p><strong>Instructions:</strong> Read the text. Answer the questions below.</p>
+
+<hr>
+
+<div style="background:#f9f9f9;padding:15px;border-left:5px solid #2196f3;">
+<p>
+Many newcomers to Canada want to continue their education in the future.
+Some people plan to study English first to improve their language skills.
+Others want to take college programs or job training courses.
+Before choosing a program, students often think about their goals, time,
+and money. Some classes are full-time, while others are part-time or online.
+Planning for future study can help people find better jobs and feel more confident.
+</p>
+</div>
+
+<div class="task">
+<h3>🟦 Task 1: Main Idea</h3>
+<p>What is the main idea of the reading?</p>
+<select>
+  <option>Choose one</option>
+  <option>Finding a job in Canada</option>
+  <option>Planning education for the future</option>
+  <option>Problems with studying English</option>
+</select>
+</div>
+
+<div class="task">
+<h3>🟦 Task 2: Details</h3>
+
+<p>1. What do many newcomers want to do?</p>
+<select>
+  <option>Choose one</option>
+  <option>Continue their education</option>
+  <option>Travel to other countries</option>
+  <option>Change their name</option>
+</select>
+
+<p>2. What do some people plan to study first?</p>
+<select>
+  <option>Choose one</option>
+  <option>English</option>
+  <option>Math</option>
+  <option>Driving</option>
+</select>
+</div>
+
+<div class="task">
+<h3>🟦 Task 3: Vocabulary</h3>
+<p>In the sentence below, what does <strong>part-time</strong> mean?</p>
+<p><em>“Some classes are full-time, while others are part-time or online.”</em></p>
+
+<select>
+  <option>Choose one</option>
+  <option>Studying for some hours or days</option>
+  <option>Studying every day</option>
+  <option>Studying only at night</option>
+</select>
+</div>
+
+<div class="task">
+<h3>🟦 Task 4: Think and Answer</h3>
+<p>Why is planning for future study important?</p>
+
+<select>
+  <option>Choose one</option>
+  <option>It helps people find better jobs</option>
+  <option>It makes studying harder</option>
+  <option>It costs more money</option>
+</select>
+</div>
+
+<div class="task">
+<h3>🟦 Task 5: About You</h3>
+<p>What do you want to study in the future? Write 1–2 sentences.</p>
+<textarea rows="4"></textarea>
+
+<p><em>You can take a screenshot of this page for your portfolio.</em></p>
+</div>
+
+</div>
+
 </body>
 </html>
